--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
           Galeri Projek
         </h2>
         <div class="gallery-grid">
-          <img src="img/project1.jpg" alt="Projek 1" />
-          <img src="img/project2.jpg" alt="Projek 2" />
-          <img src="img/project3.jpg" alt="Projek 3" />
+          <img src="img/gambar tukang 1.jpg" alt="Projek 1" />
+          <img src="img/gambar tukang 2.jpg" alt="Projek 2" />
+          <img src="img/gambar tukang 3.jpg" alt="Projek 3" />
         </div>
       </div>
     </section>
