--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
           Galeri Projek
         </h2>
         <div class="gallery-grid">
-          <img src="img/gambar tukang 1.jpeg.jpg" alt="Projek 1" />
-          <img src="img/gambar tukang 2.jpeg.jpg" alt="Projek 2" />
-          <img src="img/gambar tukang 3.jpeg.jpg" alt="Projek 3" />
+          <img src="img/gambar tukang 1.jpeg" alt="Projek 1" />
+          <img src="img/gambar tukang 2.jpeg" alt="Projek 2" />
+          <img src="img/gambar tukang 3.jpeg" alt="Projek 3" />
         </div>
       </div>
     </section>
