--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
           Tentang Pak Solihin
         </h2>
         <p class="lang"
-           data-ms="Dengan pengalaman lebih 20 tahun dalam bidang pembinaan, Pak Solihin telah menghasilkan pelbagai projek berkualiti tinggi di Malaysia dan Indonesia."
-           data-id="Dengan pengalaman lebih dari 20 tahun di bidang konstruksi, Pak Solihin telah menyelesaikan berbagai proyek berkualitas tinggi di Malaysia dan Indonesia."
-           data-en="With over 20 years of experience in construction, Mr. Solihin has delivered many high-quality projects in Malaysia and Indonesia.">
-          Dengan pengalaman lebih 20 tahun dalam bidang pembinaan, Pak Solihin telah menghasilkan pelbagai projek berkualiti tinggi di Malaysia dan Indonesia.
+           data-ms="Dengan pengalaman lebih 10 tahun dalam bidang pembinaan, Pak Solihin telah menghasilkan berbagai projek berkualiti tinggi di Malaysia dan Indonesia."
+           data-id="Dengan pengalaman lebih dari 10 tahun di bidang konstruksi, Pak Solihin telah menyelesaikan berbagai proyek berkualitas tinggi di Malaysia dan Indonesia."
+           data-en="With over 10 years of experience in construction, Mr. Solihin has delivered many high-quality projects in Malaysia and Indonesia.">
+          Dengan pengalaman lebih 10 tahun dalam bidang pembinaan, Pak Solihin telah menghasilkan pelbagai projek berkualiti tinggi di Malaysia dan Indonesia.
         </p>
       </div>
     </section>
