--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
             data-en="Contact Us">
           Hubungi Kami
         </h2>
-        <form class="contact-form">
-          <input type="text" placeholder="Nama" />
-          <input type="email" placeholder="Email" />
-          <textarea placeholder="Mesej"></textarea>
-          <button type="submit" class="btn lang"
-                  data-ms="Hantar" data-id="Kirim" data-en="Send">Hantar</button>
-        </form>
+       <form class="contact-form" action="mailto:m.soliihin71@gmail.com" method="post" enctype="text/plain">
+  <input type="text" name="name" placeholder="Nama" />
+  <input type="email" name="email" placeholder="Email" />
+  <textarea name="message" placeholder="Mesej"></textarea>
+  <button type="submit" class="btn lang"
+          data-ms="Hantar" data-id="Kirim" data-en="Send">Hantar</button>
+</form>
       </div>
     </section>
   </main>
