--- a/index.html
+++ b/index.html
@@ -166,13 +166,15 @@
 
     <!-- CONTACT -->
     <section id="contact" class="section alt-bg">
-      <div class="container">
-        <h2 class="lang"
-            data-ms="Hubungi Kami"
-            data-id="Hubungi Kami"
-            data-en="Contact Us">
-          Hubungi Kami
-        </h2>
+  <div class="container">
+    <h2 class="lang"
+        data-ms="Hubungi Kami"
+        data-id="Hubungi Kami"
+        data-en="Contact Us">
+      Hubungi Kami
+    </h2>
+    <p>Klik link berikut untuk mengirim email:</p>
+    <a href="mailto:m.soliihin71@gmail.com">m.soliihin71@gmail.com</a>
        <form class="contact-form" action="mailto:m.soliihin71@gmail.com" method="post" enctype="text/plain">
   <input type="text" name="name" placeholder="Nama" />
   <input type="email" name="email" placeholder="Email" />
