--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="section alt-bg">
+   <section id="contact" class="section alt-bg">
   <div class="container">
     <h2 class="lang"
         data-ms="Hubungi Kami"
@@ -173,17 +173,16 @@
         data-en="Contact Us">
       Hubungi Kami
     </h2>
-    <p>Klik link berikut untuk mengirim email:</p>
-    <a href="mailto:m.soliihin71@gmail.com">m.soliihin71@gmail.com</a>
-       <form class="contact-form" action="mailto:m.soliihin71@gmail.com" method="post" enctype="text/plain">
-  <input type="text" name="name" placeholder="Nama" />
-  <input type="email" name="email" placeholder="Email" />
-  <textarea name="message" placeholder="Mesej"></textarea>
-  <button type="submit" class="btn lang"
-          data-ms="Hantar" data-id="Kirim" data-en="Send">Hantar</button>
-</form>
-      </div>
-    </section>
+
+    <p>Pilih cara menghubungi kami:</p>
+    <ul class="contact-list">
+      <li>Email: <a href="mailto:m.soliihin71@gmail.com">m.soliihin71@gmail.com</a></li>
+      <li>WhatsApp: <a href="https://wa.me/60194037834" target="_blank">+60 19-403 7834</a></li>
+      <li>Facebook: <a href="https://www.facebook.com/share/1GfwH5qw7k/" target="_blank">Facebook Page</a></li>
+      <li>TikTok: <a href="https://www.tiktok.com/@mrsolihin335" target="_blank">@mrsolihin335</a></li>
+    </ul>
+  </div>
+</section>
   </main>
 
   <!-- Footer -->
