--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Laman Rasmi Pak Solihin</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Tambahkan Font Awesome untuk ikon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <!-- Navigasi Utama -->
@@ -151,38 +153,37 @@
           Galeri Projek
         </h2>
         <div class="gallery-grid">
-        <img src="gambar_tukang1.jpeg" alt="Projek 1" />
-<img src="gambar_tukang2.jpeg" alt="Projek 2" />
-<img src="gambar_tukang3.jpeg" alt="Projek 3" />
-<img src="gambar_tukang4.jpeg" alt="Projek 4" />
-<img src="gambar_tukang5.jpeg" alt="Projek 5" />
-<img src="gambar_tukang6.jpeg" alt="Projek 6" />
-<img src="gambar_tukang7.jpeg" alt="Projek 7" />
-<img src="gambar_tukang8.jpeg" alt="Projek 8" />
-<img src="gambar_tukang9.jpeg" alt="Projek 9" />
+          <img src="gambar_tukang1.jpeg" alt="Projek 1" />
+          <img src="gambar_tukang2.jpeg" alt="Projek 2" />
+          <img src="gambar_tukang3.jpeg" alt="Projek 3" />
+          <img src="gambar_tukang4.jpeg" alt="Projek 4" />
+          <img src="gambar_tukang5.jpeg" alt="Projek 5" />
+          <img src="gambar_tukang6.jpeg" alt="Projek 6" />
+          <img src="gambar_tukang7.jpeg" alt="Projek 7" />
+          <img src="gambar_tukang8.jpeg" alt="Projek 8" />
+          <img src="gambar_tukang9.jpeg" alt="Projek 9" />
         </div>
       </div>
     </section>
 
     <!-- CONTACT -->
-   <section id="contact" class="section alt-bg">
-  <div class="container">
-    <h2 class="lang"
-        data-ms="Hubungi Kami"
-        data-id="Hubungi Kami"
-        data-en="Contact Us">
-      Hubungi Kami
-    </h2>
+    <section id="contact" class="section alt-bg">
+      <div class="container">
+        <h2 class="lang"
+            data-ms="Hubungi Kami"
+            data-id="Hubungi Kami"
+            data-en="Contact Us">
+          Hubungi Kami
+        </h2>
 
-    <p>Pilih cara menghubungi kami:</p>
-    <ul class="contact-list">
-      <li>Email: <a href="mailto:m.soliihin71@gmail.com">m.soliihin71@gmail.com</a></li>
-      <li>WhatsApp: <a href="https://wa.me/60194037834" target="_blank">+60 19-403 7834</a></li>
-      <li>Facebook: <a href="https://www.facebook.com/share/1GfwH5qw7k/" target="_blank">Facebook Page</a></li>
-      <li>TikTok: <a href="https://www.tiktok.com/@mrsolihin335" target="_blank">@mrsolihin335</a></li>
-    </ul>
-  </div>
-</section>
+        <ul class="contact-list">
+          <li><a href="mailto:m.soliihin71@gmail.com"><i class="fa fa-envelope"></i> Email</a></li>
+          <li><a href="https://wa.me/60194037834" target="_blank"><i class="fa fa-whatsapp"></i> WhatsApp</a></li>
+          <li><a href="https://www.facebook.com/share/1GfwH5qw7k/" target="_blank"><i class="fa fa-facebook"></i> Facebook</a></li>
+          <li><a href="https://www.tiktok.com/@mrsolihin335" target="_blank"><i class="fa fa-tiktok"></i> TikTok</a></li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <!-- Footer -->
@@ -198,3 +199,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
