--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laman Rasmi Pak Solihin</title>
+  <title>Laman Rasmi Solihin</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Tambahkan Font Awesome untuk ikon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -12,10 +12,10 @@
   <!-- Navigasi Utama -->
   <header>
     <div class="container">
-      <h1 id="site-title" data-ms="Laman Rasmi Pak Solihin"
-          data-id="Situs Resmi Pak Solihin"
-          data-en="Official Website of Mr. Solihin">
-        Laman Rasmi Pak Solihin
+      <h1 id="site-title" data-ms="Laman Rasmi Solihin"
+          data-id="Situs Resmi Solihin"
+          data-en="Official Website of Solihin">
+        Laman Rasmi Solihin
       </h1>
       <nav>
         <ul>
@@ -49,10 +49,10 @@
     <section id="home" class="hero">
       <div class="content">
         <h2 class="lang" 
-            data-ms="Selamat Datang di Laman Rasmi Pak Solihin"
-            data-id="Selamat Datang di Situs Resmi Pak Solihin"
-            data-en="Welcome to Mr. Solihin’s Official Website">
-          Selamat Datang di Laman Rasmi Pak Solihin
+            data-ms="Selamat Datang di Laman Rasmi Solihin"
+            data-id="Selamat Datang di Situs Resmi Solihin"
+            data-en="Welcome to Solihin’s Official Website">
+          Selamat Datang di Laman Rasmi Solihin
         </h2>
         <p class="lang"
            data-ms="Kami menyediakan perkhidmatan binaan dan rekabentuk yang berkualiti tinggi."
@@ -73,16 +73,16 @@
     <section id="about" class="section">
       <div class="container">
         <h2 class="lang"
-            data-ms="Tentang Pak Solihin"
-            data-id="Tentang Pak Solihin"
-            data-en="About Mr. Solihin">
-          Tentang Pak Solihin
+            data-ms="Tentang Solihin"
+            data-id="Tentang Solihin"
+            data-en="About Solihin">
+          Tentang Solihin
         </h2>
         <p class="lang"
-           data-ms="Dengan pengalaman lebih 10 tahun dalam bidang pembinaan, Pak Solihin telah menghasilkan berbagai projek berkualiti tinggi di Malaysia dan Indonesia."
-           data-id="Dengan pengalaman lebih dari 10 tahun di bidang konstruksi, Pak Solihin telah menyelesaikan berbagai proyek berkualitas tinggi di Malaysia dan Indonesia."
-           data-en="With over 10 years of experience in construction, Mr. Solihin has delivered many high-quality projects in Malaysia and Indonesia.">
-          Dengan pengalaman lebih 10 tahun dalam bidang pembinaan, Pak Solihin telah menghasilkan pelbagai projek berkualiti tinggi di Malaysia dan Indonesia.
+           data-ms="Dengan pengalaman lebih 10 tahun dalam bidang pembinaan, Solihin telah menghasilkan berbagai projek berkualiti tinggi di Malaysia dan Indonesia."
+           data-id="Dengan pengalaman lebih dari 10 tahun di bidang konstruksi, Solihin telah menyelesaikan berbagai proyek berkualitas tinggi di Malaysia dan Indonesia."
+           data-en="With over 10 years of experience in construction, Solihin has delivered many high-quality projects in Malaysia and Indonesia.">
+          Dengan pengalaman lebih 10 tahun dalam bidang pembinaan, Solihin telah menghasilkan pelbagai projek berkualiti tinggi di Malaysia dan Indonesia.
         </p>
       </div>
     </section>
@@ -189,10 +189,10 @@
   <!-- Footer -->
   <footer>
     <p class="lang"
-       data-ms="© 2025 Pak Solihin. Hak cipta terpelihara."
-       data-id="© 2025 Pak Solihin. Hak cipta dilindungi."
-       data-en="© 2025 Mr. Solihin. All rights reserved.">
-      © 2025 Pak Solihin. Hak cipta terpelihara.
+       data-ms="© 2025 Solihin. Hak cipta terpelihara."
+       data-id="© 2025 Solihin. Hak cipta dilindungi."
+       data-en="© 2025 Solihin. All rights reserved.">
+      © 2025 Solihin. Hak cipta terpelihara.
     </p>
   </footer>
 
